--- a/razorPagesEgitim/appsettings.json
+++ b/razorPagesEgitim/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "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"
 }
